# MCP-Hub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  hub.config.json  pyproject.toml
.benchmarks/: meta_mode_benchmark.py  results.json  search_approaches_benchmark.py
.github/workflows/: ci.yml  docker.yml
docs/: context-pressure-research.md  progress-forwarding.md
docs/superpowers/plans/: 2026-07-12-protocol-reliability-improvements.md  2026-07-12-webui-fix-hatago-features.md  2026-07-13-progressive-discovery.md  2026-07-15-production-hardening.md  2026-07-19-webui-performance-fix.md
src/mcp_hub/: admin_router.py  auth.py  bootstrap.py  config.py  env_expand.py  main.py  meta_provider.py  proxy_manager.py  registry.py  state.py  store.py  streamable_http_patch.py  tag_filter.py  validators.py
src/mcp_hub/static/: index.html
tests/: conftest.py  test_admin_api.py  test_auth.py  test_config.py  test_dogfood.py  test_env_expand.py  test_health.py  test_integration_real.py  test_llm_agent.py  test_meta_integration.py  test_retry.py  test_streamable_http_async.py  test_tag_filter.py  test_tool_index.py  test_validators.py
tests/test_servers/: async_mcp_server.py  sse_echo_server.py  stdio_echo_server.py
