[project]
name = "mcp-hub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
