[project]
name = "mcp-hub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.0,<3.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "rank_bm25>=0.2.2",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
